# ros2-ws

./: .clangd  .gitignore  Dockerfile  LICENSE  README.md  frames_2024-11-27_16.12.20.gv  frames_2024-11-27_16.14.56.gv  install_tflite.sh  start_camera.sh  start_single.sh  start_slave.sh
.cache/clangd/index/: AlignedBox.h.4D5946207579D627.idx  AngleAxis.h.3E3BB6EDFDAAA01A.idx  ArithmeticSequence.h.8FA00B15B616158E.idx  Array.h.79F4E6EE785724E2.idx  ArrayBase.h.68B5394DF1AF5570.idx  ArrayCwiseBinaryOps.inc.15CED1F36AC202EA.idx  ArrayCwiseUnaryOps.inc.20DAF8BB4A610565.idx  ArrayWrapper.h.7ECACA6F1DDFBC9C.idx  Assert.h.22941A2C7552EA2B.idx  Assign.h.D1DC9D73BC1BD96A.idx  AssignEvaluator.h.9EB6C63C281EE0D8.idx  AssignmentFunctors.h.4C2A5A0FD85BD5DD.idx  BDCSVD.h.383AA91141FFB242.idx  BFloat16.h.F747C0196C7DAFD3.idx  BadOptionalAccessException.hpp.9941EE8BD0798916.idx  BadParamException.h.7738D2F457B8AAA3.idx  BandMatrix.h.FAEEE0C421DA4BE2.idx  BinaryFunctors.h.E36A53A3007B34D8.idx  BlasUtil.h.B8528266CB25ACF9.idx  Block.h.C239CCD96B241394.idx  BlockHouseholder.h.77B5B9E0B2F54CCF.idx  BlockMethods.inc.F3E33B87C640AFA1.idx  Cdr.h.3AA4CD7EE3710D97.idx  CdrEncoding.hpp.3EDA7C95EE77FB50.idx  Cholesky.8DC4C9FF7B478617.idx  ColPivHouseholderQR.h.C473C2FC28526B5B.idx  CommaInitializer.h.3FAE3AA13A3807E4.idx  CommonCwiseBinaryOps.inc.0B11ADC321213635.idx  CommonCwiseUnaryOps.inc.753A284FA6A2B631.idx  CompleteOrthogonalDecomposition.h.5273EE90B2B91EEA.idx  Complex.h.A9E0EFAC6EA4A3E9.idx  ComplexEigenSolver.h.75C00B10A447F804.idx  ComplexSchur.h.8246BFBC6193B5D1.idx  ConditionEstimator.h.44D6FC5A5717BE46.idx  ConfigureVectorization.h.CB38A5A331B69886.idx  ConjHelper.h.6AC1BE899D11854F.idx  Constants.h.8283E927FE4F3386.idx  Core.87D9DC29C09DE0E3.idx  CoreEvaluators.h.E39786FEB5860529.idx  CoreIterators.h.D1E2CDD6940CCCC7.idx  (+1436 more)
converter/: converter.py
docker_env/: Dockerfile
src/hpe-test/: CMakeLists.txt  package.xml
src/hpe_msgs/: CMakeLists.txt  package.xml
src/hpe_msgs/msg/: Box.msg  Calibration.msg  Detection.msg  Detections.msg  Hpe2d.msg  Hpe3d.msg  IntrinsicParams.msg  Joints2d.msg  Joints3d.msg  Master.msg  Slave.msg
src/hpe_msgs/srv/: Calibration.srv  Estimate.srv
src/hpe_test/: CMakeLists.txt  package.xml
src/hpe_test/calibration/: calibration.json.example  calibration_A.json  calibration_B.json  camera_poses.yaml  camera_poses.yaml.yml
src/hpe_test/include/hpe_test/: accuracy_node.hpp  calibration.hpp  data.hpp  data.inl  loop_node.hpp  markers.hpp  master_node.hpp  master_node_single.hpp  resizer_node.hpp  responses.hpp  slave_node.hpp  slave_node_single.hpp  tf2_broadcaster_node.hpp  visualizer_node.hpp  webcam_node.hpp  worker_node.hpp
src/hpe_test/launch/: launch.xml  launch_with_realsense.py  nodes_config.yaml
src/hpe_test/msg/: Hpe.msg
src/hpe_test/src/: accuracy_node.cpp  accuracy_node_main.cpp  calibration.cpp  data.cpp  loop_node.cpp  markers.cpp  master_node.cpp  master_node_main.cpp  master_node_single.cpp  master_node_single_main.cpp  resizer_node.cpp  resizer_node_main.cpp  responses.cpp  slave_node.cpp  slave_node_main.cpp  slave_node_single.cpp  slave_node_single_main.cpp  tf2_broadcaster_node.cpp  tf2_broadcaster_node_main.cpp  visualizer_node.cpp  visualizer_node_main.cpp  webcam_node.cpp  webcam_node_main.cpp  worker_node.cpp  worker_node_main.cpp
